# pyzeros2

./: .gitignore  README.md  client.json5  debug.py  get_token.py  main.py  myidl.py  pixi.toml  pyproject.toml  query_scan.py  router.json5
pyzeros/: __init__.py  _scope.py  basic_usage.py  builtin_msgs.py  custom_msgs.py  debug.py  demo.py  example.py  node.py  pub.py  qos.py  service_client.py  service_common.py  service_server.py  session.py  sub.py  utils.py
pyzeros/examples/: _demo_utils.py  basic_usage.py  custom_msgs.py  demo.py  example.py
pyzeros/exemples/: __init__.py  _demo_utils.py  basic_usage.py  custom_msgs.py  demo.py  example.py
tests/: afor_tests.py  conftest.py  test_afor_compatibility.py  test_cdr.py  test_fuzzed.py  test_namespaces.py  test_qos.py  test_qos_interop.py  test_scope.py  test_services.py  test_session.py  test_utils.py
tests/bench/: base.py  pyzeros_bench.py
